# telegram_weather_bot

./: .dockerignore  .env.template.py  .gitignore  Dockerfile  README.md  bot_logger.py  docker-compose.yml  loader.py  main.py  pyproject.toml
config_data/: config.py
handlers/messages/: __init__.py  non_state_callback_query.py  non_state_message.py
handlers/messages/commands/: __init__.py  cancel.py  city_weather.py  start.py
handlers/messages/states/: __init__.py
handlers/messages/states/current_city_weather/: __init__.py  confirm_city_from_callback.py  confirm_city_from_message.py  input_city.py
handlers/sites_api/: open_wx_map.py
keyboards/inlines/: cities.py  options.py
states/: current_city_weather.py
utils/: bot_commands.py  bot_state_storage.py
